--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -23,7 +23,7 @@ custom_template/debug=""
 
 name="HTML5"
 platform="HTML5"
-runnable=false
+runnable=true
 custom_features=""
 export_filter="all_resources"
 include_filter=""
